# ProgramLanguageLearning

./: .gitignore  README.md
codeql/codeql-custom-queries-cpp/: codeql-pack.lock.yml  codeql-pack.yml  example.ql
cplusplus/adt/include/: DynamicArray.h  SharedPtr.h  String.h  UniquePtr.h
cplusplus/adt/lib/: Dummy.cpp
cplusplus/algorithm/: CMakeLists.txt  README
cplusplus/algorithm/include/: BTree.h  binary_tree.h
cplusplus/algorithm/lib/: CMakeLists.txt
cplusplus/concurrency/: 1_hello_thread.cpp  2_condition.cpp  3_future.cpp  4_future_and_wait_for.cpp  5_package_task.cpp  6_thread_pool_example.cpp  7_async_and_thread_pool.cpp  CMakeLists.txt
cplusplus/concurrency/utils/: utils.h
cplusplus/gtest/: CMakeLists.txt  LICENSE  README  README.md
cplusplus/gtest/src/: CMakeLists.txt  Employee.cpp  Employee.h  Main.cpp  Person.cpp  Person.h  Utils.cpp  Utils.h  testDynamicArray.cpp
cplusplus/gtest/test/: CMakeLists.txt  EmployeeMock.cpp  Utils.cpp  UtilsTest.cpp  UtilsTest_F.cpp
cplusplus/interview/: CMakeLists.txt
cplusplus/interview/include/: DynamicArray.h  MSharedPtr.h  MString.h  UniquePtr.h
cplusplus/interview/lib/: CMakeLists.txt  MSharedPtr.cpp
cplusplus/interview/test/: CMakeLists.txt
cplusplus/llvm-ir/controlFlow/ifStat/: cf.cpp  cfWithDebugInfo.ll  cfWithO1.ll  cfWithoutOptimization.ll
cplusplus/llvm-ir/controlFlow/whileStat/: cfWhile.cpp  cfWhileDefaultCompile.ll  cfWhileWithDebugINfo.ll  cfWhileWithO1.ll
cplusplus/llvm-ir/helloWorld/: hello.cpp  hello.ll  world.ll
cplusplus/stl/: 01_feature_test.cpp  02_hash_identifier.cpp  03_utility_program.cpp  04_placement_new.cpp  05_va_args.cpp  06_source_loaction.cpp  07_compare.cpp  08_typeinfo.cpp  09_initializer_list.cpp  10_type_traits.cpp  11_virtual_method.cpp  12_concept.cpp  13_unique_ptr.cpp  17_exchange.cpp  18_optional.cpp  21_excepted.cpp  CMakeLists.txt  README  README.md  a.out  test.cpp
cplusplus/stl/include/: common.h  person.h
cplusplus/stl/old-source/: 02_hash_identifier.cpp  03_utility_program.cpp  07_compare.cpp  09_initializer_list.cpp  10_type_traits.cpp  13_unique_ptr.cpp  14_shared_ptr.cpp  15_weak_ptr.cpp  16_function_object.cpp  19_variant.cpp  20_any.cpp  CMakeLists.txt
cplusplus/stl/old-source/utils/: class_demo.h  container_to_string.h  stl.h  test.h
cplusplus/stl/source/: 01_algorigthm.cpp  02_ranges.cpp  03_views.cpp  CMakeLists.txt
cplusplus/stl/utils/: stl.h  test.h  test.hpp
cplusplus/system-api/: CMakeLists.txt
cplusplus/system-api/source/: 1_ptrace.cpp  2_fork.cpp  CMakeLists.txt
cplusplus/tmp-lang/exam-result/: CMakeLists.txt
cplusplus/tmp-lang/exam-result/n-gram/: CMakeLists.txt  ProblemA.cpp  ProblemB.cpp  n-gram.h  testing.cpp  thread-pool.h  training.cpp
cplusplus/tmp-lang/exam-result/n-gram/case/: input  simp-pro.conf
cplusplus/tmp-lang/exam-result/n-gram/case/profile/: danish.profile  simple_input.profile
protobuf/: example-test.cc  example.pb.cc  example.pb.h  example.proto
python/: README.md
python/tests/: test_built_in_data_structure.py
python/tools/: run-all-tests.py
rust/: .gitignore  Cargo.toml
tests/: test_control_flow_grammer.py
tools/: check.py  run-all-tests.py
