cmake_minimum_required(VERSION 3.10)

project(n-gram)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CPM_SOURCE_CACHE ${CMAKE_BINARY_DIR}/third-party)
include(cmake/CPM.cmake)
CPMAddPackage(
    NAME robin-map
    GITHUB_REPOSITORY Tessil/robin-map
    GIT_TAG v1.4.0
)

add_subdirectory(n-gram)
